--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,7 +1,5 @@
-<nav class=" navbar navbar-dark bg-dark">
-  <div class="container">
-    <a class="navbar-brand" href="#">Cliente</a>
-  </div>
-</nav>  
-
-<app-cliente></app-cliente>
+<app-nav-bar></app-nav-bar>
+<app-banner></app-banner>
+<app-services></app-services>
+<app-demo></app-demo>
+<app-footer></app-footer>
