--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -1,1 +1,44 @@
 /* You can add global styles to this file, and also import other style files */
+@import "~bootstrap-icons/font/bootstrap-icons.css";
+@import "~bootstrap-social/bootstrap-social.css";
+@import "~bootstrap/dist/css/bootstrap.css";
+@import "~font-awesome/css/font-awesome.css";
+html {
+  box-sizing: border-box;
+  font-size: 62.5%;
+}
+
+*, *:before, *:after {
+  box-sizing: inherit;
+}
+html {
+  color: #222;
+  font-size: 1em;
+  line-height: 1.4;
+}
+body {
+  font-family: "Open Sans", sans-serif;
+  color: #444;
+  display: flex;
+  flex-direction: column;
+}
+
+header{
+  position: absolute;
+  z-index: 10;
+  width: 100%;
+}
+
+a{
+  color: white;
+  text-decoration: none;
+}
+
+a:hover {
+  color: rgb(231, 229, 229);
+  text-decoration: none;
+}
+
+h1, h2, h3, h4, h5, h6, .font-primary {
+  font-family: "Roboto", sans-serif;
+}
