--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,5 +1,1 @@
-<app-nav-bar></app-nav-bar>
-<app-banner></app-banner>
-<app-services></app-services>
-<app-demo></app-demo>
-<app-footer></app-footer>
+<router-outlet></router-outlet>
