--- a/frontend/src/app/home/nav-bar/nav-bar.component.html
+++ b/frontend/src/app/home/nav-bar/nav-bar.component.html
@@ -1,6 +1,6 @@
 <header class="d-flex">
   <div><nav class="navbar navbar-expand-lg navbar-dark fixed-top px-5">
-    <a class="navbar-brand" href="#">
+    <a class="navbar-brand" routerLink="/">
       <img src="../../assets/img/logo-01.png" alt="" >
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
@@ -10,13 +10,13 @@
     <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
       <ul class="navbar-nav mx-auto mt-2 mt-lg-0">
         <li class="nav-item">
-          <a class="nav-link" href="noticias.html">Noticias</a>
+          <a class="nav-link" routerLink="./noticias">Noticias</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="equipo.html">Equipo</a>
+          <a class="nav-link" routerLink="./equipo">Equipo</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="contactanos.html">Contáctanos</a>
+          <a class="nav-link" routerLink="./contactanos">Contáctanos</a>
         </li>
       </ul>
       <ul class="navbar-nav my-2 my-lg-0" id="btI">
