--- a/frontend/src/app/contactanos/contactanos.component.html
+++ b/frontend/src/app/contactanos/contactanos.component.html
@@ -88,7 +88,7 @@
         <form (ngSubmit)="contactForm(form.value)" #form="ngForm" >
 
       <div class="col-md-12">
-          <h4>Llena nuestro formulario y nos pondremos en contacto contigo lo antes posible.<br></h4>
+          <h4>Llena este formulario y nos pondremos en contacto contigo lo antes posible.<br></h4>
       </div>
 
       <div class="form-group-name">       <!-- Full Name -->
