Cambios al login y register

--- a/frontend/src/app/home/nav-bar/nav-bar.component.html
+++ b/frontend/src/app/home/nav-bar/nav-bar.component.html
@@ -10,21 +10,21 @@
     <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
       <ul class="navbar-nav mx-auto mt-2 mt-lg-0">
         <li class="nav-item">
-          <a class="nav-link" routerLink="./noticias">Noticias</a>
+          <a class="nav-link" routerLink="/noticias">Noticias</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" routerLink="./equipo">Equipo</a>
+          <a class="nav-link" routerLink="/equipo">Equipo</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" routerLink="./contactanos">Contáctanos</a>
+          <a class="nav-link" routerLink="/contactanos">Contáctanos</a>
         </li>
       </ul>
       <ul class="navbar-nav my-2 my-lg-0" id="btI">
         <span id="botonLogin" class="btn btn-outline-primary mr-sm-2" role="button">
-          <a>Iniciar Sesion</a>
+          <a routerLink="/login">Iniciar Sesion</a>
         </span>
         <span class="btn btn-primary mr-sm-2" id="botonRegistro" role="button" >
-          <a routerLink="./registro">Registrarse</a>
+          <a routerLink="/registro">Registrarse</a>
         </span>
       </ul>
     </div>
