--- a/frontend/src/app/login/login.component.html
+++ b/frontend/src/app/login/login.component.html
@@ -1,40 +1,25 @@
-<div id="loginModal" class="modal fade" role="dialog">
-  <div class="modal-dialog modal-lg" role="content">
-      <div class="modal-content">
-          <div class="modal-header">
-              <h4 class="madal-tittle">Login</h4>
-              <button type="button" class="close" data-dismiss="modal">
-                  &times;
-              </button>
-          </div>
-          <div class="modal-body">
-                  <div class="form-row">
-                      <div class="form-group col-sm-6">
-                          <label for="usrname"><span class="fa fa-user"></span> Username or Email</label>
-                          <input type="email" class="form-control form-control-sm mr-1" id="exampleInputEmail3" placeholder="Enter email">
-                      </div>
-                      <div class="form-group col-sm-6">
-                          <label for="psw"><span class="fa fa-eye"></span> Password</label>
-                          <input type="password" class="form-control form-control-sm mr-1" id="exampleInputPassword3" placeholder="Password">
-                      </div>
-                      <div class="col-sm-12">
-                          <div class="form-check">
-                              <div class="text-center text-sm-left"></div>
-                              <input class="form-check-input" type="checkbox">
-                              <label class="form-check-label"> Remember me </label>
-                              <div class="text-center text-sm-right">
-                                <p>Not a member? <a href="#" class="blue-text">Sign Up</a></p>
-                                <p>Forgot <a href="#" class="blue-text">Password?</a></p>
-                              </div>
-                          </div>
-                      </div>
-                  </div>
-
-          </div>
-          <div class="modal-footer">
-                  <button id="SigC" type="button" class="btn btn-secondary btn-sm ml-auto" data-dismiss="modal">Cancel</button>
-                  <button id="SigL" type="button" class="btn btn-primary btn-sm ml-1">Sign in</button>
-          </div>
-      </div>
-  </div>
-</div>
+<body class="text-center">
+    
+    <main class="form-signin">
+      <form>
+        <a routerLink='/' ><img class="mb-4" src="../assets/img/logo-01.png" alt="Moneytracker logo" width="auto" height="100"></a>
+        <h1 class="h3 mb-3 fw-normal">¡Bienvenido!</h1>
+        <form action="">
+            <div class="form-floating">
+                <input type="email" class="form-control" id="floatingInput" placeholder="correo@ejemplo.com">
+                <label for="floatingInput">Correo Electrónico</label>
+              </div>
+              <div class="form-floating">
+                <input type="password" class="form-control" id="floatingPassword" placeholder="Clave">
+                <label for="floatingPassword">Clave</label>
+              </div>
+              <button class="w-100 btn btn-lg btn-primary" type="submit">Iniciar Sesión</button>
+        </form>
+       
+    
+       
+        <p class="mt-5 mb-3 text-muted">¿No tienes una cuenta?</p>
+        <a routerLink='/registro'>Regístrate aquí</a>
+      </form>
+    </main>
+</body>
