Cambios al login y register 2

--- a/frontend/src/app/login/login.component.html
+++ b/frontend/src/app/login/login.component.html
@@ -1,23 +1,18 @@
 <body class="text-center">
     
-    <main class="form-signin">
-      <form>
+    <main class="form-signin fade-in">
+      <form action="">
         <a routerLink='/' ><img class="mb-4" src="../assets/img/logo-01.png" alt="Moneytracker logo" width="auto" height="100"></a>
         <h1 class="h3 mb-3 fw-normal">¡Bienvenido!</h1>
-        <form action="">
+        <div class="form-floating">
+            <input type="email" class="form-control" id="floatingInput" placeholder="correo@ejemplo.com">
+            <label for="floatingInput">Correo Electrónico</label>
+            </div>
             <div class="form-floating">
-                <input type="email" class="form-control" id="floatingInput" placeholder="correo@ejemplo.com">
-                <label for="floatingInput">Correo Electrónico</label>
-              </div>
-              <div class="form-floating">
-                <input type="password" class="form-control" id="floatingPassword" placeholder="Clave">
-                <label for="floatingPassword">Clave</label>
-              </div>
-              <button class="w-100 btn btn-lg btn-primary" type="submit">Iniciar Sesión</button>
-        </form>
-       
-    
-       
+            <input type="password" class="form-control" id="floatingPassword" placeholder="Clave">
+            <label for="floatingPassword">Clave</label>
+            </div>
+            <button class="w-100 btn btn-lg btn-primary" type="submit">Iniciar Sesión</button>
         <p class="mt-5 mb-3 text-muted">¿No tienes una cuenta?</p>
         <a routerLink='/registro'>Regístrate aquí</a>
       </form>
